# Minecraft-Dependency-Manager

./: .gitignore  Cargo.toml  README.md  Sample of config.toml  config.toml  dictionary.toml  dictionary_ru-example.toml  language.toml  language_ru-example.toml  settings.toml  settings_example.toml
.content/: hot-reload.webm  preview.webm
.github/workflows/: cli.yml  lint.yml  rust.yml  rust_master.yml  rust_rewriting.yml
src/: main.rs  model.rs  query.rs
src/config/: additions.rs  core.rs  datapack.rs  downloader.rs  errors.rs  lock.rs  mod.rs  model.rs  plugin.rs  plugins.rs  version.rs  versions.rs
src/config/core/: mod.rs
src/config/models/: item.rs  mod.rs  model.rs  modrinth.rs  vanila.rs  vanilla.rs
src/config/models/cores/: paper.rs  purpur.rs  vanilla.rs
src/config/models/extensions/: modrinth.rs
src/config/plugins/: mod.rs
src/config/plugins/models/: modrinth.rs
src/controller/: mod.rs
src/dictionary/: config.rs  defunct.rs  dictionary.rs  downloader.rs  manager.rs  mod.rs  model.rs  pb_messages.rs
src/downloader/: core.rs  downloader.rs  hash.rs  mod.rs
src/downloader/models/: mod.rs  model.rs  modrinth.rs  papermc.rs  vanilla.rs
src/downloader/models/cores/: fabric.rs  folia.rs  mod.rs  paper.rs  purpur.rs  vanilla.rs  velocity.rs  waterfall.rs
src/downloader/models/extensions/: modrinth.rs
src/errors/: error.rs  errors.rs
src/lock/: core.rs  ext.rs  ext_metalist.rs  lock.rs  locker.rs  mod.rs
src/manager/: download.rs  manage.rs  messages.rs  mod.rs  watch_changer.rs
src/mananger/: download.rs  manage.rs  mod.rs  watch_changer.rs
src/models/: mod.rs  model.rs
src/models/cores/: paper.rs  purpur.rs  vanilla.rs
src/models/extensions/: modrinth.rs
src/networkmanager/: controller.rs
src/settings/: additions.rs  core.rs  mod.rs
src/settings/extensions/: mod.rs  mode.rs  mods.rs  plugin.rs  plugins.rs
src/tr/: delete.rs  download.rs  hash.rs  load.rs  mod.rs  save.rs
src/tr/model/: core.rs  extension.rs  mod.rs
