[package]
name = "minecraft_addon_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
console = "0.15.8"
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
log = "0.4.21"
md-5 = "0.10.6"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
