[package]
name = "minecraft_addon_controller"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.80"
async-watcher = "0.2.1"
bytes = "1.6.0"
console = "0.15.8"
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
indicatif-log-bridge = "0.2.2"
lazy_static = "1.4.0"
log = "0.4.21"
md-5 = "0.10.6"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.12"
