[package]
name = "mdm"
version = "0.1.0"
edition = "2021"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "change_me"
license = "MIT"

[dependencies]
async-lazy = { version = "=0.1.0", features = ["parking_lot"] }
async-trait = "0.1.80"
async-watcher = "0.3.0"
bytes = "1.6.0"
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
machine-uid = "0.5.1"
md-5 = "0.10.6"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.12"


[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 24
panic = 'abort'
strip = true
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
